homelab-gitops/apps/media/base/stash-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stash
  namespace: media
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - stash.thundertest.org
      secretName: stash-tls
  rules:
    - host: stash.thundertest.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stash
                port:
                  number: 80
